--- a/wheezy64_fusion/README
+++ b/wheezy64_fusion/README
@@ -1,5 +1,7 @@
 Basic configuration for using Debian Wheezy (amd64) with VMWare Fusion
 
-Base box has the following provisioners:
-* ansible
+Base box has the following installed:
+* VMWare Tools
 * puppet
+* ansible
+
